<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotating_lidar_accumulator</name>
  <version>0.0.0</version>
  <description>Collects scans from a rotating 2D LiDAR and returns a 3D point cloud</description>
  <maintainer email="davidedorigoni@gmail.com">DavDori</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>PCL</depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend> <!-- google test -->
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
